# sprinkles

./: .gitignore  .travis.yml  CHANGELOG.md  Example.html  LICENSE  README.md  TODO  package-release.sh  run-devel.sh  sprinkles.cabal  stack.yaml  templar.cabal
app/: Main.hs
doc/guide/: 001-getting-started.markdown  010-routes.markdown  020-data-backends.markdown  030-templates.markdown  100-deployment.markdown  200-baking-static-sites.markdown
embedded/: .htaccess
example-project/: project.yml
example-project/templates/: 404.html  500.html  default.html  master.html
examples/blogg/: blogg.fcgi  project.yml
examples/blogg/config/: server.yml
examples/blogg/data/: menu.yml  settings.yml  stuff.sqlite
examples/blogg/data/pages/: about.md  hello.docx  home.markdown  lorem-ipsum.html  textile.textile
examples/blogg/static/: style.css
examples/blogg/templates/: 404.html  500.html  home.html  master.html  page.html  pandoc-raw.html  pandoc.html
examples/blogg/templates/include/: macros.html
examples/countryInfo/: .gitignore  countryInfo.cgi  countryInfo.fcgi  geonames-account.dist.yml  project.yml  server.yml
examples/countryInfo/templates/: 404.html  500.html  country.html  countryList.html
examples/playground/: db.sqlite  db.yml  mysql.yml  page.html  project.yml  users.yaml
examples/playground/config/: server.yml
examples/playground/templates/: 404.html  405.html  blah.html  edit.html  invalid.html  login.html  page.html  page.xml  test.html  text.txt
src/Control/: MaybeEitherMonad.hs
src/Data/: AList.hs  EmbedVersion.hs  Expandable.hs  RandomString.hs  Walk.hs
src/Text/Pandoc/Readers/: CustomCreole.hs
src/Web/: Sprinkles.hs  Templar.hs
src/Web/Sprinkles/: Backends.hs  Bake.hs  Cache.hs  Databases.hs  Exceptions.hs  Handlers.hs  Logger.hs  MatchedText.hs  Pandoc.hs  PandocGVal.hs  Pattern.hs  Prelude.hs  Project.hs  ProjectConfig.hs  Replacement.hs  Rule.hs  Serve.hs  ServerConfig.hs  SessionHandle.hs  SessionStore.hs  Sessions.hs  TemplateContext.hs
src/Web/Sprinkles/Backends/: Data.hs  Loader.hs  Parsers.hs  Spec.hs
src/Web/Sprinkles/Backends/Loader/: FileLoader.hs  HttpLoader.hs  LiteralLoader.hs  RequestBodyLoader.hs  SqlLoader.hs  SubprocessLoader.hs  Type.hs
src/Web/Sprinkles/Cache/: Filesystem.hs  Memcached.hs  Memory.hs
src/Web/Sprinkles/Handlers/: Common.hs  JSON.hs  Redirect.hs  Respond.hs  Static.hs  Template.hs
src/Web/Sprinkles/SessionStore/: Database.hs  InProc.hs
src/Web/Templar/: Backends.hs  Cache.hs  Databases.hs  Exceptions.hs  Handlers.hs  Logger.hs  MatchedText.hs  PandocGVal.hs  Pattern.hs  Project.hs  ProjectConfig.hs  Replacement.hs  Rule.hs  Serve.hs  ServerConfig.hs
src/Web/Templar/Backends/: Data.hs  Loader.hs  Parsers.hs  Spec.hs
src/Web/Templar/Backends/Loader/: FileLoader.hs  HttpLoader.hs  LiteralLoader.hs  RequestBodyLoader.hs  SqlLoader.hs  SubprocessLoader.hs  Type.hs
src/Web/Templar/Cache/: Filesystem.hs  Memcached.hs  Memory.hs
src/Web/Templar/Handlers/: Common.hs  JSON.hs  Redirect.hs  Respond.hs  Static.hs  Template.hs
test/: Spec.hs
test/Web/Sprinkles/: ApplicationTest.hs  PatternTest.hs
test/Web/Templar/: ApplicationTest.hs  PatternTest.hs
