name:                sprinkles
version:             0.6.0.0
synopsis:            JSON API to HTML website wrapper
description:         Please see README.md. More text to please stack. More text to please stack. More text to please stack. More text to please stack. More text to please stack. More text to please stack. More text to please stack. More text to please stack. More text to please stack. More text to please stack.
homepage:            https://sprinkles.tobiasdammers.nl/
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          tdammers@gmail.com
copyright:           2016 Tobias Dammers
category:            Web
build-type:          Simple
extra-source-files:  embedded/.htaccess
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Web.Sprinkles
                 , Web.Sprinkles.Prelude
                 , Web.Sprinkles.Logger
                 , Web.Sprinkles.Exceptions
                 , Web.Sprinkles.Databases
                 , Web.Sprinkles.Cache
                 , Web.Sprinkles.Cache.Filesystem
                 , Web.Sprinkles.Cache.Memory
                 , Web.Sprinkles.Cache.Memcached
                 , Web.Sprinkles.Pandoc
                 , Web.Sprinkles.Sessions
                 , Web.Sprinkles.SessionHandle
                 , Web.Sprinkles.SessionStore
                 , Web.Sprinkles.SessionStore.Database
                 , Web.Sprinkles.SessionStore.InProc
                 , Web.Sprinkles.Pattern
                 , Web.Sprinkles.Replacement
                 , Web.Sprinkles.TemplateContext
                 , Web.Sprinkles.Backends
                 , Web.Sprinkles.Backends.Loader
                 , Web.Sprinkles.Backends.Spec
                 , Web.Sprinkles.Backends.Data
                 , Web.Sprinkles.Backends.Parsers
                 , Web.Sprinkles.Backends.Loader.SqlLoader
                 , Web.Sprinkles.Backends.Loader.FileLoader
                 , Web.Sprinkles.Backends.Loader.Type
                 , Web.Sprinkles.Backends.Loader.HttpLoader
                 , Web.Sprinkles.Backends.Loader.SubprocessLoader
                 , Web.Sprinkles.Backends.Loader.RequestBodyLoader
                 , Web.Sprinkles.Backends.Loader.LiteralLoader
                 , Web.Sprinkles.Handlers
                 , Web.Sprinkles.Handlers.Common
                 , Web.Sprinkles.Handlers.Respond
                 , Web.Sprinkles.Handlers.Static
                 , Web.Sprinkles.Handlers.Redirect
                 , Web.Sprinkles.Handlers.JSON
                 , Web.Sprinkles.Handlers.Template
                 , Web.Sprinkles.MatchedText
                 , Web.Sprinkles.PandocGVal
                 , Web.Sprinkles.Rule
                 , Web.Sprinkles.ProjectConfig
                 , Web.Sprinkles.ServerConfig
                 , Web.Sprinkles.Project
                 , Web.Sprinkles.Serve
                 , Web.Sprinkles.Bake
                 , Control.MaybeEitherMonad
                 , Data.EmbedVersion
                 , Data.AList
                 , Data.Expandable
                 , Data.RandomString
                 , Text.Pandoc.Readers.CustomCreole
  build-depends: base >= 4.7 && < 5
               , Cabal >= 2.4.0 && <2.5
               , Glob >=0.9.3 && <0.10
               , HDBC >=2.4.0.2 && <2.5
               , HDBC-postgresql >=2.3.2.5 && <2.4
               , HDBC-sqlite3 >=2.3.3.1 && <2.4
               , HDBC-mysql >=0.7.1.0 && <0.8
               , HTTP >=4000.3.12 && <4000.4
               , SHA >=1.6.4.4 && <1.7
               , aeson >=1.3.1.1 && <1.4
               , aeson-pretty >=0.8.7 && <0.9
               , array >=0.5.0 && <0.6
               , base64-bytestring >=1.0.0.1 && <1.1
               , bcrypt >=0.0.11 && <0.1
               , bytestring >=0.10.8.2 && <0.11
               , case-insensitive >=1.2.0.11 && <1.3
               , cereal >=0.5.7.0 && <0.6
               , containers >=0.5.11.0 && <0.6
               , css-syntax >=0.0.8 && <0.1
               , curl >=1.3.8 && <1.4
               , data-default >=0.7.1.1 && <0.8
               , directory >=1.3.1.5 && <1.4
               , extra >=1.6.12 && <1.7
               , file-embed >=0.0.10.1 && <0.1
               , filepath >=1.4.2 && <1.5
               , ginger >=0.8.1.0 && <0.9
               , hashable >=1.2.7.0 && <1.3
               , heredoc >=0.2.0.0 && <0.3
               , hsyslog >=5.0.1 && <5.1
               , http-types >=0.12.2 && <0.13
               , lens >=4.17 && <4.18
               , memcache >=0.2.0.1 && <0.3
               , mime-types >=0.1.0.8 && <0.2
               , mtl >=2.2.2 && <2.3
               , network-uri >=2.6.1.0 && <2.7
               , nonce >=1.0.7 && <1.1
               , pandoc >=2.2.1 && <2.3
               , pandoc-types >=1.17.5.1 && <1.18
               , parsec >=3.1.13.0 && <3.2
               , process >=1.6.3.0 && <1.7
               , random >=1.1 && <1.2
               , random-shuffle >=0.0.4 && <0.1
               , regex-base >=0.93.2 && <0.94
               , regex-pcre >=0.94.4 && <0.95
               , safe >=0.3.17 && <0.4
               , scientific >=0.3.6.2 && <0.4
               , split >=0.2.3.3 && <0.3
               , stm >=2.4.5.1 && <2.5
               , system-locale >=0.2.0.0 && <0.3
               , tagsoup >=0.14.7 && <0.15
               , template-haskell >=2.2.0.0 && <2.14
               , text >=1.2.3.1 && <1.3
               , time >=1.8.0.2 && <1.9
               , transformers >=0.5.5.0 && <0.6
               , unix-compat >=0.5.1 && <0.6
               , unix-time >=0.3.8 && <0.4
               , unordered-containers >=0.2.9.0 && <0.3
               , unordered-containers >=0.2.9.0 && <0.3
               , utf8-string >=1.0.1.1 && <1.1
               , vector >=0.12.0.1 && <0.13
               , wai >=3.2.1.2 && <3.3
               , wai-extra >=3.0.24.3 && <3.1
               , wai-extra >=3.0.24.3 && <3.1
               , wai-handler-fastcgi >=3.0.0.2 && <3.1
               , warp >=3.2.25 && <3.3
               , yaml >=0.8.32 && <0.12
               , yeshql-hdbc >=4.1.0.1 && <4.2
  default-language:    Haskell2010
  ghc-options: -fwarn-incomplete-patterns

executable sprinkles
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
               , sprinkles
               , async
               , data-default
               , safe
               , text
               , parsec
  default-language: Haskell2010

test-suite sprinkles-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules: Web.Sprinkles.PatternTest
               , Web.Sprinkles.ApplicationTest
  build-depends: base
               , sprinkles
               , data-default
               , directory
               , filepath
               , heredoc
               , regex-base
               , regex-pcre
               , tasty
               , tasty-hunit
               , tasty-quickcheck
               , temporary
               , wai-extra
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://bitbucket.org/tdammers/sprinkles
