name:                sprinkles
version:             0.7.0.0
synopsis:            JSON API to HTML website wrapper
description:         Please see README.md. More text to please stack. More text to please stack. More text to please stack. More text to please stack. More text to please stack. More text to please stack. More text to please stack. More text to please stack. More text to please stack. More text to please stack.
homepage:            https://sprinkles.tobiasdammers.nl/
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          tdammers@gmail.com
copyright:           2016 Tobias Dammers
category:            Web
build-type:          Simple
extra-source-files:  embedded/.htaccess
cabal-version:       >=1.10

flag mysql
    description: Enable MySQL support
    default: True
    manual: False
flag sqlite
    description: Enable SQLite support
    default: True
    manual: False
flag postgres
    description: Enable PostgreSQL support
    default: True
    manual: False
flag curl
    description: Enable cURL HTTP backend
    default: True
    manual: False

library
  hs-source-dirs: src
  exposed-modules: Web.Sprinkles
                 , Web.Sprinkles.Prelude
                 , Web.Sprinkles.Logger
                 , Web.Sprinkles.Exceptions
                 , Web.Sprinkles.Databases
                 , Web.Sprinkles.Cache
                 , Web.Sprinkles.Cache.Filesystem
                 , Web.Sprinkles.Cache.Memory
                 , Web.Sprinkles.Cache.Memcached
                 , Web.Sprinkles.Pandoc
                 , Web.Sprinkles.Sessions
                 , Web.Sprinkles.SessionHandle
                 , Web.Sprinkles.SessionStore
                 , Web.Sprinkles.SessionStore.Database
                 , Web.Sprinkles.SessionStore.InProc
                 , Web.Sprinkles.Pattern
                 , Web.Sprinkles.Replacement
                 , Web.Sprinkles.TemplateContext
                 , Web.Sprinkles.Backends
                 , Web.Sprinkles.Backends.Loader
                 , Web.Sprinkles.Backends.Spec
                 , Web.Sprinkles.Backends.Data
                 , Web.Sprinkles.Backends.Parsers
                 , Web.Sprinkles.Backends.Loader.SqlLoader
                 , Web.Sprinkles.Backends.Loader.FileLoader
                 , Web.Sprinkles.Backends.Loader.Type
                 , Web.Sprinkles.Backends.Loader.SubprocessLoader
                 , Web.Sprinkles.Backends.Loader.RequestBodyLoader
                 , Web.Sprinkles.Backends.Loader.LiteralLoader
                 , Web.Sprinkles.Handlers
                 , Web.Sprinkles.Handlers.Common
                 , Web.Sprinkles.Handlers.Respond
                 , Web.Sprinkles.Handlers.Static
                 , Web.Sprinkles.Handlers.Redirect
                 , Web.Sprinkles.Handlers.JSON
                 , Web.Sprinkles.Handlers.Template
                 , Web.Sprinkles.MatchedText
                 , Web.Sprinkles.PandocGVal
                 , Web.Sprinkles.Rule
                 , Web.Sprinkles.ProjectConfig
                 , Web.Sprinkles.ServerConfig
                 , Web.Sprinkles.Project
                 , Web.Sprinkles.Serve
                 , Web.Sprinkles.Bake
                 , Control.MaybeEitherMonad
                 , Data.EmbedVersion
                 , Data.AList
                 , Data.Expandable
                 , Data.RandomString
                 , Text.Pandoc.Readers.CustomCreole
  build-depends: base >= 4.7 && < 5
               , Cabal >=3.2.0.0 && <3.3
               , Glob >=0.10.0 && <0.11
               , HDBC >=2.4.0.3 && <2.5
               , HTTP >=4000.3.14 && <4000.4
               , SHA >=1.6.4.4 && <1.7
               , aeson >=1.4.7.1 && <1.6
               , aeson-pretty >=0.8.8 && <0.9
               , array >=0.5.4.0 && <0.6
               , base64-bytestring >=1.0.0.0 && <1.2
               , bytestring >=0.10.10.0 && <0.11
               , case-insensitive >=1.2.1.0 && <1.3
               , cereal >=0.5.8.1 && <0.6
               , containers >=0.6.2.1 && <0.7
               , cryptonite >=0.26 && <0.27
               , css-syntax >=0.1.0.0 && <0.2
               , data-default >=0.7.1.1 && <0.8
               , directory >=1.3.6.1 && <1.4
               , extra >=1.7.1 && <1.8
               , file-embed >=0.0.12.0 && <0.1
               , filepath >=1.4.2.1 && <1.5
               , ginger >=0.10.0.2 && <0.11
               , hashable >=1.3.0.0 && <1.4
               , heredoc >=0.2.0.0 && <0.3
               , hsyslog >=5.0.2 && <5.1
               , http-types >=0.12.3 && <0.13
               , lens >=4.19.2 && <4.20
               , memcache >=0.2.0.1 && <0.3
               , mime-types >=0.1.0.9 && <0.2
               , mtl >=2.2.2 && <2.3
               , network <3.0
               , network-uri >=2.6.0.0 && <2.8
               , nonce >=1.0.7 && <1.1
               , pandoc >=2.9.2.1 && <2.10
               , pandoc-types >=1.20 && <1.21
               , parsec >=3.1.14.0 && <3.2
               , process >=1.6.9.0 && <1.7
               , random >=1.1 && <1.2
               , random-shuffle >=0.0.4 && <0.1
               , regex-base >=0.94.0.0 && <0.95
               , regex-pcre >=0.95.0.0 && <0.96
               , safe >=0.3.18 && <0.4
               , scientific >=0.3.6.2 && <0.4
               , split >=0.2.3.4 && <0.3
               , stm >=2.5.0.0 && <2.6
               , system-locale
               , tagsoup >=0.14.8 && <0.15
               , template-haskell >=2.15.0.0 && <2.17
               , temporary >=1.3 && <1.4
               , text >=1.2.4.0 && <1.3
               , time >=1.9 && <2.0
               , transformers >=0.5.6.2 && <0.6
               , unix-compat >=0.5.2 && <0.6
               , unix-time >=0.4.7 && <0.5
               , unordered-containers >=0.2.10.0 && <0.3
               , unordered-containers >=0.2.10.0 && <0.3
               , utf8-string >=1.0.1.1 && <1.1
               , vector >=0.12.1.2 && <0.13
               , wai >=3.2.2.1 && <3.3
               , wai-extra >=3.0.29.1 && <3.1
               , wai-extra >=3.0.29.1 && <3.1
               , wai-handler-fastcgi >=3.0.0.2 && <3.1
               , warp >=3.3.11 && <3.4
               , yaml >=0.11.4.0 && <0.12
               , yeshql-hdbc >=4.1.1.2 && <4.2
  default-language:    Haskell2010
  ghc-options: -fwarn-incomplete-patterns
  if flag(mysql)
    build-depends: HDBC-mysql >=0.7.1.0 && <0.8
    cpp-options: -DFEATURE_MYSQL
  if flag(sqlite)
    build-depends: HDBC-sqlite3 >=2.3.3.1 && <2.4
    cpp-options: -DFEATURE_SQLITE
  if flag(postgres)
    build-depends: HDBC-postgresql >=2.3.2.5 && <2.4
    cpp-options: -DFEATURE_POSTGRES
  if flag(curl)
    other-modules: Web.Sprinkles.Backends.Loader.HttpLoader
    build-depends: curl >=1.3.8 && <1.4
    cpp-options: -DFEATURE_CURL

executable sprinkles
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
               , sprinkles
               , async
               , data-default
               , safe
               , text
               , parsec
               , bytestring
               , yaml
  default-language: Haskell2010
  if flag(mysql)
    cpp-options: -DFEATURE_MYSQL
  if flag(sqlite)
    cpp-options: -DFEATURE_SQLITE
  if flag(postgres)
    cpp-options: -DFEATURE_POSTGRES
  if flag(curl)
    cpp-options: -DFEATURE_CURL

test-suite sprinkles-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules: Web.Sprinkles.PatternTest
               , Web.Sprinkles.ApplicationTest
  build-depends: base
               , sprinkles
               , data-default
               , directory
               , filepath
               , heredoc
               , regex-base
               , regex-pcre
               , tasty
               , tasty-hunit
               , tasty-quickcheck
               , temporary
               , wai-extra
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://bitbucket.org/tdammers/sprinkles
