name:                templar
version:             0.1.0.0
synopsis:            JSON API to HTML website wrapper
description:         Please see README.md
homepage:            https://bitbucket.org/tdammers/templar
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          tdammers@gmail.com
copyright:           2016 Tobias Dammers
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Templar
  build-depends:       base >= 4.7 && < 5
               ,       aeson
               ,       bytestring
               ,       classy-prelude
               ,       containers
               ,       filepath
               ,       ginger
               ,       Glob
               ,       hashable
               ,       safe
               ,       text
               ,       transformers
               ,       unordered-containers
               ,       vector
               ,       yaml
  default-language:    Haskell2010

executable templar-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , templar
  default-language:    Haskell2010

test-suite templar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , templar
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://bitbucket.org/tdammers/templar
