name:                templar
version:             0.2.0.0
synopsis:            JSON API to HTML website wrapper
description:         Please see README.md
homepage:            https://bitbucket.org/tdammers/templar
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          tdammers@gmail.com
copyright:           2016 Tobias Dammers
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Web.Templar
                 , Web.Templar.Logger
                 , Web.Templar.Databases
                 , Web.Templar.Cache
                 , Web.Templar.Cache.Filesystem
                 , Web.Templar.Cache.Memory
                 , Web.Templar.Cache.Memcached
                 , Web.Templar.Pattern
                 , Web.Templar.Replacement
                 , Web.Templar.Backends
                 , Web.Templar.Backends.Loader
                 , Web.Templar.Backends.Spec
                 , Web.Templar.Backends.Data
                 , Web.Templar.Backends.Parsers
                 , Web.Templar.Backends.Loader.SqlLoader
                 , Web.Templar.Backends.Loader.FileLoader
                 , Web.Templar.Backends.Loader.Type
                 , Web.Templar.Backends.Loader.HttpLoader
                 , Web.Templar.Backends.Loader.SubprocessLoader
                 , Web.Templar.PandocGVal
                 , Web.Templar.Rule
                 , Web.Templar.ProjectConfig
                 , Web.Templar.ServerConfig
                 , Web.Templar.Project
                 , Web.Templar.Serve
                 , Control.MaybeEitherMonad
                 , Data.EmbedVersion
  build-depends: base >= 4.7 && < 5
               , Cabal
               , Glob
               , HDBC
               , HDBC-postgresql
               , HDBC-sqlite3
               , HTTP
               , aeson
               , aeson-pretty
               , array
               , bytestring
               , case-insensitive
               , cereal
               , classy-prelude
               , containers
               , curl
               , data-default
               , directory
               , filepath
               , ginger
               , hashable
               , hsyslog
               , http-types
               , memcached-binary
               , mime-types
               , network-uri
               , pandoc
               , pandoc-creole
               , pandoc-types
               , parsec
               , process
               , random-shuffle
               , regex-base
               , regex-pcre
               , safe
               , scientific
               , system-locale
               , template-haskell
               , text
               , time
               , transformers
               , unix-compat
               , unordered-containers
               , utf8-string
               , vector
               , wai
               , wai-extra
               , wai-handler-fastcgi
               , warp
               , yaml
  default-language:    Haskell2010

executable templar
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
               , templar
               , classy-prelude
               , data-default
               , safe
               , parsec
  default-language: Haskell2010

test-suite templar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends: base
               , templar
               , classy-prelude
               , regex-base
               , regex-pcre
               , tasty
               , tasty-hunit
               , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://bitbucket.org/tdammers/templar
